2007-10-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Tell EU::MM to put correct configure_requires and
	no_index information into the generated META.yml file.

2007-10-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/PangoLayout.xs: Fix leak in
	Gtk2::Pango::Layout::get_iter.  (Reported by Quentin Sculo in
	#482795)

2007-09-24	kaffeetisch

	* Makefile.PL: Prettify build output by summarizing what is done
	instead of printing executed command lines.

	* tools/genkeysyms.pl
	* tools/podifyenums.pl: Don't put timestamps into generated files
	so they don't get installed every single time even though there
	are no real changes.

2007-09-16	kaffeetisch

	* Gtk2.pm
	* Makefile.PL
	* NEWS
	* README: Stable release 1.160.

2007-09-16	kaffeetisch

	* t/GtkIconView.t: Fix a test failure.

2007-09-15	kaffeetisch

	* t/01.GtkWindow.t
	* t/Gdk.t
	* t/GdkColor.t
	* t/GdkDisplay.t
	* t/GdkEvent.t
	* t/GdkKeys.t
	* t/GdkPango.t
	* t/GdkPixbuf.t
	* t/GdkWindow.t
	* t/GdkX11.t
	* t/GtkAboutDialog.t
	* t/GtkAction.t
	* t/GtkCellLayout.t
	* t/GtkEntry.t
	* t/GtkEntryCompletion.t
	* t/GtkIconTheme.t
	* t/GtkIconView.t
	* t/GtkMenuItem.t
	* t/GtkMenuToolButton.t
	* t/GtkPageSetup.t
	* t/GtkPaperSize.t
	* t/GtkPrintSettings.t
	* t/GtkRange.t
	* t/GtkStatusIcon.t
	* t/GtkTextBuffer.t
	* t/GtkTextMark.t
	* t/GtkToolItem.t
	* t/GtkTreeView.t
	* t/GtkWidget.t
	* t/PangoCairo.t
	* t/PangoFont.t
	* t/PangoLayout.t
	* xs/Gdk.xs
	* xs/GdkDisplay.xs
	* xs/GdkEvent.xs
	* xs/GdkKeys.xs
	* xs/GdkPango.xs
	* xs/GdkWindow.xs
	* xs/GdkX11.xs
	* xs/GtkAboutDialog.xs
	* xs/GtkAction.xs
	* xs/GtkCellLayout.xs
	* xs/GtkEntry.xs
	* xs/GtkEntryCompletion.xs
	* xs/GtkIconTheme.xs
	* xs/GtkMenuToolButton.xs
	* xs/GtkPageSetup.xs
	* xs/GtkPaperSize.xs
	* xs/GtkPrintSettings.xs
	* xs/GtkRange.xs
	* xs/GtkStatusIcon.xs
	* xs/GtkTextBuffer.xs
	* xs/GtkTextMark.xs
	* xs/GtkToolItem.xs
	* xs/GtkTreeView.xs
	* xs/GtkTreeViewColumn.xs
	* xs/GtkWidget.xs
	* xs/GtkWindow.xs
	* xs/PangoCairo.xs